--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,18 +3,19 @@
 
 <head>
   <title>{{title}}</title>
+
   {{!--
   <link rel="stylesheet" href="/stylesheets/font-awesome.min.css"> --}}
-  <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-  <link rel="stylesheet" href="/stylesheets/simditor.css">
-  <link rel="stylesheet" href="/stylesheets/simditor-html.css">
-  <link rel="stylesheet" href="/stylesheets/animate.min.css">
+  <link rel="stylesheet" href="/stylesheets/bootstrap.min.css"/>
+  <link rel="stylesheet" href="/stylesheets/animate.min.css"/>
+  <link rel='stylesheet' href="/stylesheets/style.css"/>
+  <link rel="stylesheet" href="/bower_components/simditor/styles/simditor.css" />
+	<link rel="stylesheet" href="/bower_components/simditor-html/styles/simditor-html.css" />
 </head>
 
 <body ng-app='orderSystem'>
 
- {{{body}}}
+  {{{body}}}
 
   <script src="/javascripts/static/jquery-3.2.1.min.js"></script>
   <script src="/javascripts/static/bootstrap.min.js"></script>
@@ -23,38 +24,38 @@
   <script src="/javascripts/static/angular-messages.min.js"></script>
   <script src="/javascripts/static/angular-cookies.min.js"></script>
   <script src="/javascripts/static/angular-animate.min.js"></script>
-  <script src="/javascripts/static/angular-loader.min.js"></script>
-  <script src="/javascripts/static/module.js"></script>
-  <script src="/javascripts/static/hotkeys.js"></script>
-  <script src="/javascripts/static/uploader.js"></script>
-  <script src="/javascripts/static/simditor.js"></script>
+  <script src="/javascripts/static/angular-loader.min.js"></script> {{!--
+  <script src="/javascripts/static/module.js"></script> --}} {{!--
+  <script src="/javascripts/static/hotkeys.js"></script> --}} {{!--
+  <script src="/javascripts/static/uploader.js"></script> --}} {{!--
+  <script src="/javascripts/static/simditor.js"></script> --}}
   <script src="/javascripts/static/md5.min.js"></script>
   <script src="/javascripts/static/city.min.js"></script>
   <script src="/javascripts/static/angular-file-upload.min.js"></script>
   <script src="/javascripts/directives/pagination.js"></script>
-  
- 	<script src="/bower_components/simple-module/lib/module.js"></script>
-	<script src="/bower_components/simple-hotkeys/lib/hotkeys.js"></script>
-	<script src="/bower_components/simple-uploader/lib/uploader.js"></script>
-	<script src="/bower_components/simditor/lib/simditor.js"></script>
-	<script src="/bower_components/js-beautify/js/lib/beautify.js"></script>
-	<script src="/bower_components/js-beautify/js/lib/beautify-css.js"></script>
-	<script src="/bower_components/js-beautify/js/lib/beautify-html.js"></script>
-	<script src="/bower_components/simditor-html/lib/simditor-html.js"></script>
+
+  <script src="/bower_components/simple-module/lib/module.js"></script>
+  <script src="/bower_components/simple-hotkeys/lib/hotkeys.js"></script>
+  <script src="/bower_components/simple-uploader/lib/uploader.js"></script>
+  <script src="/bower_components/simditor/lib/simditor.js"></script>
+  <script src="/bower_components/js-beautify/js/lib/beautify.js"></script>
+  <script src="/bower_components/js-beautify/js/lib/beautify-css.js"></script>
+  <script src="/bower_components/js-beautify/js/lib/beautify-html.js"></script>
+  <script src="/bower_components/simditor-html/lib/simditor-html.js"></script>
   <script src="/bower_components/angular-simditor/src/angular-simditor.js"></script>
 
   <script src="/javascripts/route.js"></script>
-  <script src="/javascripts/controllers/baseCtrl.js"></script>  
+  <script src="/javascripts/controllers/baseCtrl.js"></script>
   <script src="/javascripts/controllers/indexCtrl.js"></script>
   <script src="/javascripts/controllers/baseInfoCtrl.js"></script>
   <script src="/javascripts/controllers/institutionCtrl.js"></script>
-  <script src="/javascripts/controllers/institutionDetailCtrl.js"></script>  
+  <script src="/javascripts/controllers/institutionDetailCtrl.js"></script>
   <script src="/javascripts/controllers/addressCtrl.js"></script>
-  <script src="/javascripts/controllers/addressDetailCtrl.js"></script>  
+  <script src="/javascripts/controllers/addressDetailCtrl.js"></script>
   <script src="/javascripts/controllers/orderDetailCtrl.js"></script>
   <script src="/javascripts/controllers/changePwd.js"></script>
 
-  
+
 
 
 
