--- a/views/orders/orderDetail.hbs
+++ b/views/orders/orderDetail.hbs
@@ -613,7 +613,7 @@
 
                         <a class="btn btn-primary center" ng-click="orderCancel()">取消</a>
 
-                        <a class="btn btn-primary center">提交</a>
+                        {{!-- <a class="btn btn-primary center">提交</a> --}}
                     </div>
                 </div>
 
