--- a/views/users/password.hbs
+++ b/views/users/password.hbs
@@ -1,24 +1,3 @@
-<div id="myModal" class="modal fade" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title">提示信息：</h4>
-            </div>
-            <div class="modal-body">
-                <p>[[message]]</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="closeModal()">确定</button>
-            </div>
-        </div>
-        <!-- /.modal-content -->
-    </div>
-    <!-- /.modal-dialog -->
-</div>
-<!-- /.modal -->
 <div class="pub-bgcolor">
     <div class="container">
         <h3>密码管理</h3>
@@ -30,14 +9,21 @@
             <div class="panel-body">
 
 
-                <form novalidate role="form" class="form-horizontal">
+                <form novalidate role="form" class="form-horizontal" name='changePwdForm'>
 
                     <div class="form-group">
                         <label class="col-sm-2 control-label">
                             原密码
                         </label>
                         <div class="col-sm-6">
-                            <input type="password" class="form-control" name="oldpassword" ng-model="user.oldpassword" />
+                            <input type="password" class="form-control" name="oldpassword" ng-model="user.oldpassword" placeholder="原密码" ng-minlength='6' ng-maxlength='20'
+                                required/>
+                            <div class="error" ng-messages="changePwdForm.oldpassword.$error">
+                                {{!--
+                                <div ng-message="required" style="color:green">请输入密码(数字,字母的组合)</div> --}}
+                                <div ng-message="minlength" style="color:red">密码至少为6位</div>
+                                <div ng-message="maxlength" style="color:red">密码最多为20位</div>
+                            </div>
                         </div>
                     </div>
 
@@ -46,7 +32,14 @@
                             新密码
                         </label>
                         <div class="col-sm-6">
-                            <input type="password" class="form-control" name="newpassword" ng-model="user.newpassword" />
+                            <input type="password" class="form-control" name="newpassword" ng-model="user.newpassword" placeholder="新密码" ng-minlength='6' ng-maxlength='20'
+                                required/>
+                            <div class="error" ng-messages="changePwdForm.newpassword.$error">
+                                {{!--
+                                <div ng-message="required" style="color:green">请输入密码(数字,字母的组合)</div> --}}
+                                <div ng-message="minlength" style="color:red">密码至少为6位</div>
+                                <div ng-message="maxlength" style="color:red">密码最多为20位</div>
+                            </div>
                         </div>
                     </div>
 
@@ -55,13 +48,26 @@
                             再次输入新密码
                         </label>
                         <div class="col-sm-6">
-                            <input type="password" class="form-control" name="renewpassword" ng-model="user.renewpassword" />
+                            <input type="password" class="form-control" name="renewpassword" ng-model="user.renewpassword" placeholder="请再次输入新密码" ng-minlength='6' ng-maxlength='20'
+                                required/>
+                            <div class="error" ng-messages="changePwdForm.renewpassword.$error">
+                                {{!--
+                                <div ng-message="required" style="color:green">请输入密码(数字,字母的组合)</div> --}}
+                                <div ng-message="minlength" style="color:red">密码至少为6位</div>
+                                <div ng-message="maxlength" style="color:red">密码最多为20位</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-sm-6 col-sm-offset-2" style="color:red">
+                            <b>[[message]]</b>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-4">
-                            <a class="btn btn-primary" ng-click='changePwd()' ng-disabled="!(user.oldpassword&&user.newpassword&&user.renewpassword)">确定</a>
+                            <a class="btn btn-primary" ng-click='changePwd()' >确定</a>
                             <a class="btn btn-primary" ng-click='cancelPwd()'>取消</a>
                         </div>
                     </div>
